LAB04/files/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: kuard
  annotations:  
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - test1386e4a2.westeurope.cloudapp.azure.com
    secretName: quickstart-example-tls
  rules:
  - host: test1386e4a2.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
